[package]
name = "pi_db"
version = "0.1.0"
authors = ["zmythleo <zmythleo@gmail.com>"]

[dependencies]
fnv = "1.0.3"
parking_lot = {version = "*", features = ["nightly"]}
crc = "*"
atom = {path = "../pi_lib/atom"}
guid = {path = "../pi_lib/guid"}
bon = {path = "../pi_lib/bon"}
sinfo = {path = "../pi_lib/sinfo"}
ordmap = {path = "../pi_lib/ordmap"}
file = {path = "../pi_lib/file"}
worker = {path = "../pi_lib/worker"}
time = {path = "../pi_lib/time"}